# ENOVA

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README_ZH.md  pyproject.toml  requirements-docker-no-deps.txt  requirements-docker.txt  requirements.txt
docker/: Dockerfile  Dockerfile.enova  Dockerfile.enova.base  Dockerfile.escaler  Dockerfile.jmeter  Dockerfile.pilot  Dockerfile.requirements  build_image.enova.base.sh  build_image.enova.sh  build_image.escaler.sh  build_image.jmeter.sh  build_image.pilot.sh
enova/: .gitignore
enova/algo/: resource.py  serializer.py  server.py  service.py
enova/api/: app_api.py  base.py  enode_api.py  escaler_api.py  pilot_api.py  prom_api.py  serving_api.py
enova/app/: db_modles.py  resource.py  serializer.py  server.py  service.py  utils.py
enova/common/: cli_helper.py  config.py  constant.py  encoder.py  error.py  g_vars.py  local.py  logger.py  utils.py
enova/enode/: enode.py  hf.py  utils.py
enova/entry/: cli.py
enova/server/: server.py
enova/serving/: apiserver.py
enova/webui/: chat.py
escaler/: build.sh  go.mod  go.sum
escaler/conf/: settings.json
escaler/scripts/: build_swagger.sh  generate_mock_files.sh  generate_ot_clientset.sh  local_docker_run.sh
front/: .env.production  components.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
llmo/enova-instrumentation-llmo/: README.md  pyproject.toml
llmo/enova-instrumentation-llmo/enova/llmo/: __init__.py
llmo/enova-instrumentation-llmo/enova/llmo/instrumentation/: __init__.py
llmo/enova-instrumentation-llmo/enova/llmo/instrumentation/fastapi/: __init__.py
llmo/enova-instrumentation-llmo/enova/llmo/instrumentation/vllm/: __init__.py  wrappers.py
llmo/enova-instrumentation-llmo/enova/llmo/metrics_adapter/: __init__.py  vllm_logging_metrics.py
scripts/: pack_whl.enova.sh  pack_whl.llmo.sh
src/front/: .env.development  .env.production  .eslintrc.cjs  README.md  package.json
src/golang/: build.sh  go.mod  go.sum
(+172 files in other folders)
