[project]
name = "enova"
version = "0.0.1"
description = "enova"
requires-python = ">=3.8"
dynamic = ["dependencies"]
authors = [
    { name = "kyokagong", email = "kyokagong@emergingai-tech.com" },
    { name = "wenxinxie", email = "wenxin@emergingai-tech.com" },
    { name = "jockyhawk", email = "jockyhawk@emergingai-tech.com" },
    { name = "kimzhao", email = "kimzhao@emergingai-tech.com" },
]
readme = "README.md"

[project.scripts]
enova = "enova.entry.cli:main"

[project.optional-dependencies]
lint = ["black==23.12.0"]
test = ["pytest", "pytest-cov", "responses", "respx"]


[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2,<=7.1.0", "toml"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["enova.*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.csv", "docker-compose-*"]
"enova.web_statics" = ["*", "*/*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.coverage.run]
omit = ["*/tests/test_*.py"]
